Remove tablist service and tighten null safety
Drops the tablist feature end-to-end (API, implementation, admin command, and plugin wiring), including related build dependencies and example toggles. The rest of the changes focus on cleanup and correctness: removing unused imports/deps, strengthening nullability and final fields, adding explicit non-null guards, and fixing small logic issues in glowing, item/recipe handling, service info output, and particle/worldborder utilities.